--- a/micro_front_end_container/.env
+++ b/micro_front_end_container/.env
@@ -1,2 +1,2 @@
-mfe1_HOST=http://localhost:3000
-mfe2_HOST=http://localhost:3001
+feed_HOST=http://localhost:3000
+messaging_HOST=http://localhost:3001
