--- a/messaging/package.json
+++ b/messaging/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "micro_front_end_container",
+  "name": "messaging",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "iframe-resizer": "^4.3.2",
-    "iframe-resizer-react": "^1.1.0",
+    "history": "^5.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
